# Paralllelism_OpenMp

./: psoa.cpp
Delivery/: CMakeLists.txt
FinalCode/: aos.cpp  paos.cpp  psoa.cpp  soa.cpp
Report/: Parte2.docx
v0/: paos_v0.cpp  psoa_v0.cpp
v1/: paos_v1.cpp
v2/: paos_v2.cpp
v3/: paos_v3.cpp
v4/: paos_v4.cpp
v5/: aos.cpp  paos_v5.cpp
v6 GG/: paos_v6_GG.cpp
v7/: paos_v7.cpp
v8_F/: aos.cpp  paos_vF.cpp
